# dockery

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  dockery-tests  gnome-docker-manager.geany  gnome-docker-manager.gresource.xml  gresource.xml  meson.build  meson_options.txt  org.lcallarec.Dockery.json
src/: App.vala  Config.vala  Feature.vala  controller.vala  gdocker  list-src.sh  main.vala  meson.build  settings.vala  signals.vala  views.vala
src/Common/: Bytes.vala  HumanUnitFormatter.vala
src/Convert/: Uri.vala
src/DockerSdk/: client.vala  client_factory.vala  containers_endpoint.vala  endpoint.vala  endpoint_aware.vala  endpoint_discovery.vala  http_client.vala  images_endpoint.vala  repository.vala  rest_client.vala  serializable.vala  server_endpoint.vala  unix_socket_client.vala  unix_socket_endpoint_discovery.vala
src/Listener/: AppWindowListener.vala  ApplicationListener.vala  ContainerListListener.vala  DaemonEventListener.vala  ImageListListener.vala  StackHubListener.vala  VolumeListListener.vala
src/Notification/: Message.vala
src/View/: AboutDialog.vala  AppHeaderBar.vala  Buttons.vala  ChildWidgetFinder.vala  Common.vala  Dialog.vala  Fonts.vala  Header.vala  MainContainer.vala  MessageDispatcher.vala  SideBar.vala  SignalDispatcher.vala  UserActions.vala
src/View/Image/: ListAll.vala
src/controller/: controller.vala
src/convert/: base.vala  uri.vala
src/docker/: client.vala  endpoint.vala  io.vala  model.vala  repository.vala
src/main/: main_3.16.vala  main_base.vala
src/notification/: message.vala
src/settings/: stack.vala
src/store/: store.vala
src/ui/: buttons.vala  container_list_menu.vala  docker_lists.vala  fonts.vala  header.vala  main.vala  sidebar.vala  views.vala
src/view/: MainContainer.vala  buttons.vala  dialog.vala  fonts.vala  header.vala  images.vala  main.vala  main_application_view.vala  sidebar.vala  user_actions.vala
(+322 files in other folders)
